<resources>
    <string name="app_name">News App</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="eg">EG</string>
    <string name="us">US</string>
    <string name="fr">FR</string>
    <string name="welcome">Welcome</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me?</string>
    <string name="forget_password">Forget Password?</string>
    <string name="log_in_with_your_account">Log in with your account</string>
    <string name="log_in_with">log in with</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="new_user_create_account">New user? Create account</string>
    <string name="sign_in_to_continue">sign in to continue</string>
    <string name="create_new_account">Create New Account</string>
    <string name="name">Name</string>
    <string name="i_agree_to_the">I agree to the </string>
    <string name="term_amp_conditions"> <![CDATA[Term & Conditions]]></string>
    <string name="already_a_user_log_in">Already a user? log in</string>
    <string name="create_account">create account</string>
    <string name="todo"> </string>
    <string name="mahmoud_morsy">Mahmoud morsy</string>
</resources>