<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A159B2FD"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/eg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eg" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/us" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/fr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fr" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>
